--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -17,7 +17,7 @@
     canvas {
       width: 100%;
       height: 100%;
-      object-fit: contain; // Ensure the Spline component maintains clarity and does not stretch.
+      object-fit: cover; // Ensure the Spline component maintains clarity and does not stretch.
     }
   }
 
